# linux-dev-2020

./: README.md
05_Environmental/: CMakeLists.txt  config.h.in  readme.txt  task5.c
06_Environment/: a.out  prog.c
07_DebuggingTracing/: Makefile  unlink-wrap.c
08_TestingCoverage/: CMakeLists.txt  README.txt
08_TestingCoverage/include/: buf.h
08_TestingCoverage/src/: CMakeLists.txt  buf.c  coverage.c
08_TestingCoverage/tests/: CMakeLists.txt
09_I18nL10n/: CMakeLists.txt  README.txt
09_I18nL10n/po/: CMakeLists.txt  task9.pot
09_I18nL10n/po/ru/: task9.po
09_I18nL10n/src/: task9.c
10_Documenting/: .CMakeLists.txt.swp  CMakeLists.txt  README.txt
10_Documenting/docs/: Doxyfile.in
10_Documenting/lib/: help_en.h  help_ru.h
10_Documenting/po/: task9.pot
10_Documenting/po/ru/: task9.po  task9.po~
10_Documenting/src/: CMakeLists.txt  task9  task9.c
11_Toolkits/: CMakeLists.txt  README.txt
11_Toolkits/src/: CMakeLists.txt  task11.c
12_Scripting/: CMakeLists.txt  README.txt
12_Scripting/include/: buf.h
12_Scripting/scripts/: comment_script.sh
12_Scripting/src/: buf.c  coverage.c
12_Scripting/tests/: test1.c  test2.c  test3.c
13_PatchInstall/: CMakeLists.txt  README.txt  install.sh
13_PatchInstall/po/: CMakeLists.txt  task9.pot
13_PatchInstall/po/en/: task9.po  task9.po~
13_PatchInstall/po/ru/: task9.po
13_PatchInstall/src/: CMakeLists.txt  task9.c
