cmake_minimum_required(VERSION 2.8)
find_library(CURS_LIB ncursesw)
find_library(PCRE_LIB pcre2-8)
add_executable(task5 task5.c)
target_link_libraries(task5 ${CURS_LIB} ${PCRE_LIB})
option(without_WTF "disable UTF" OFF)
configure_file(config.h.in config.h)
set (TR ${CMAKE_BINARY_DIR}/*)
add_custom_target(allclean COMMAND rm -rf ${TR})
